# Guition-JC4880P443-Easy-Start

./: .gitignore  CMakeLists.txt  flash_slave_fw.py  partitions.csv  read_slave_fw.bin_  readme.md  sdkconfig.defaults  testsdkconfig.defaults.esp32p4
main/: CMakeLists.txt  Kconfig copy.projbuild  Kconfig.projbuild  board_config.h  board_init.c  board_init.h  idf_component.yml  main.c  main_sys_event_handler.c  main_sys_event_handler.h
main/applications/: applications_template_not_compile.c  applications_template_not_compile.h  sys_applications.c  sys_applications.h
main/applications/sys_app_audio_play_and_rec/: audio_app.c  audio_app.h  audio_app_sample_events.c  audio_play.c  audio_play.h  audio_rec.c  audio_rec.h
main/applications/sys_app_memory_monitor/: memory_monitor_app.c  memory_monitor_app.h
main/applications/sys_app_rcp_c6_update/: ota_partition.c  rcp_c6_update_app.c  rcp_c6_update_app.h
main/applications/sys_app_sd_card_info/: sd_card_info_app.c  sd_card_info_app.h
main/applications/sys_app_time_sync/: time_sync_app.c  time_sync_app.h
main/applications/sys_app_wifi_manager/: wifi_manager_app.c  wifi_manager_app.h  wifi_manager_scan_and_print.c  wifi_manager_scan_and_print.h  wifi_start_sta.c
main/applications/ya_cloud_speech_recognition/: cloud_yandex.c  cloud_yandex.h  cloud_yandex_example.md  ya_cloud_speech_recognition_app.c  ya_cloud_speech_recognition_app.h
main/applications_for_user/lvgl_audio_player/: audio_player_app.c  audio_player_app.h
main/lvgl_gui_app/: init_lvgl_9.c  init_lvgl_9.h
main/onboard_hardware/audio_module/: init_es8311.c  init_es8311.h
main/onboard_hardware/i2c_if/: init_i2c.c  init_i2c.h
main/onboard_hardware/i2s_if/: init_i2s.c  init_i2s.h
main/onboard_hardware/net_if/: init_netif.c  init_netif.h
main/onboard_hardware/screen/: lcd_st7701.c  lcd_st7701.h
main/onboard_hardware/storage/: sd_card_io.c  sd_card_io.h
main/onboard_hardware/touch/: touch_gt911.c  touch_gt911.h
main/project_event_handler_manager/: project_event_handler_manager.c  project_event_handler_manager.h
